--- a/client/src/components/footer/Footer.css
+++ b/client/src/components/footer/Footer.css
@@ -2,9 +2,13 @@
     background-color: #232f3e;
     color: #fff;
     padding: 40px 0;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh; */
   }
   
-  .footer-container h4 {
+  .footer-container h6 {
     margin-bottom: 20px;
   }
   
@@ -29,7 +33,7 @@
   }
   
   .footer-container ul li a:hover {
-    color: #f1c40f;
+    color: orange;
   }
   
   .footer-container .footer-logo {
@@ -62,6 +66,41 @@
   }
   
   .footer-container .footer-social-icons ul li a:hover {
-    background-color: #f1c40f;
+    background-color: orange;
+  }
+  
+  .footer-container .footer-contact {
+    margin-top: 30px;
+  }
+  
+  .footer-container .footer-contact li {
+    margin-bottom: 10px;
+  }
+  
+  .footer-container .footer-contact li span {
+    display: block;
+    margin-bottom: 5px;
+  }
+  
+  .footer-container .footer-legal {
+    margin-top: 0px;
+    /* margin: auto 0 0; */
+  }
+  
+  .footer-social-links li {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+  
+  .footer-social-links li a {
+    display: flex;
+    align-items: center;
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  .footer-social-links li a svg {
+    margin-right: 5px;
   }
   
