--- a/client/src/components/footer/Footer.css
+++ b/client/src/components/footer/Footer.css
@@ -2,6 +2,7 @@
     background-color: #232f3e;
     color: #fff;
     padding: 40px 0;
+    margin-top: 20px;
     /* display: flex;
     flex-direction: column;
     justify-content: space-between;
