--- a/client/src/pages/error/Error.css
+++ b/client/src/pages/error/Error.css
@@ -19,7 +19,7 @@
   }
   
   .error-page button {
-    background-color: #007bff;
+    background-color: darkorange;
     color: #fff;
     padding: 8px 16px;
     border-radius: 4px;
